--- a/app/views/game_templates/play_rock.html.erb
+++ b/app/views/game_templates/play_rock.html.erb
@@ -1,3 +1,21 @@
 <h1>Howdy!</h1>
 
 <%= @random_move %>
+
+<div>
+  <a href="/rock">
+    Play Rock
+  </a>
+</div>
+
+<div>
+  <a href="/paper">
+    Play Paper
+  </a>
+</div>
+
+<div>
+  <a href="/scissors">
+    Play Scissors
+  </a>
+</div>
