--- a/app/views/game_templates/play_paper.html.erb
+++ b/app/views/game_templates/play_paper.html.erb
@@ -1,1 +1,17 @@
-Howdy
+<div>
+  <a href="/rock">
+    Play Rock
+  </a>
+</div>
+
+<div>
+  <a href="/paper">
+    Play Paper
+  </a>
+</div>
+
+<div>
+  <a href="/scissors">
+    Play Scissors
+  </a>
+</div>
