--- a/app/views/game_templates/play_paper.html.erb
+++ b/app/views/game_templates/play_paper.html.erb
@@ -15,3 +15,12 @@
     Play Scissors
   </a>
 </div>
+
+<h2>We played paper!</h2>
+<h2>They played <%= @random_move %>!</h2>
+<h2> We <%= @outcome %>! </h2>
+
+
+  <a href="/">
+    Rules
+  </a>
