--- a/app/views/game_templates/play_rock.html.erb
+++ b/app/views/game_templates/play_rock.html.erb
@@ -1,6 +1,4 @@
-<h1>Howdy!</h1>
 
-<%= @random_move %>
 
 <div>
   <a href="/rock">
@@ -19,3 +17,12 @@
     Play Scissors
   </a>
 </div>
+
+<h2>We played rock!</h2>
+<h2>They played <%= @random_move %>!</h2>
+<h2> We <%= @outcome %>! </h2>
+
+
+  <a href="/">
+    Rules
+  </a>
